--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,4 +33,46 @@
           <% }) %>
       </ul>
     </div>
+  
+    <div class="section">
+      <h1>Recent Games</h1>
+      <ul>
+          <% recent.forEach(project => { %>
+              <li class="project">
+                  <a href="<%= project.link %>">
+                    <img class="thumbnail" src="https://uploads.scratch.mit.edu/get_image/project/<%= project.id %>_480x360.png" />
+                  </a>
+                  <br/>
+                  <b><%= project.title.length > 15 ? project.title.slice(0,13)+'...' : project.title %></b>
+                  <br/>
+                  Tags: <%= project.tags[0] %>, <%= project.tags[1] %>
+                  <br/>
+                  <span style="font-size: 70%">
+                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %></a>
+                  </span>
+              </li>
+          <% }) %>
+      </ul>
+    </div>
+  
+    <div class="section">
+      <h1>Recent Music</h1>
+      <ul>
+          <% recent.forEach(project => { %>
+              <li class="project">
+                  <a href="<%= project.link %>">
+                    <img class="thumbnail" src="https://uploads.scratch.mit.edu/get_image/project/<%= project.id %>_480x360.png" />
+                  </a>
+                  <br/>
+                  <b><%= project.title.length > 15 ? project.title.slice(0,13)+'...' : project.title %></b>
+                  <br/>
+                  Tags: <%= project.tags[0] %>, <%= project.tags[1] %>
+                  <br/>
+                  <span style="font-size: 70%">
+                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %></a>
+                  </span>
+              </li>
+          <% }) %>
+      </ul>
+    </div>
 </html>
