--- a/views/add.ejs
+++ b/views/add.ejs
@@ -10,6 +10,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/add">Add Project</a>
+        <a href="https://scratch.mit.edu/discuss/topic/771639/">Discuss</a>
     </nav>
     <h1>Add a Scratch Project</h1>
     <form action="/add" method="POST">
