--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/add">Add Project</a>
+        <a href="https://scratch.mit.edu/discuss/topic/771639/">Discuss</a>
     </nav>
   
     <div class="section">
