--- a/views/404.ejs
+++ b/views/404.ejs
@@ -10,6 +10,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/add">Add Project</a>
+        <a href="https://scratch.mit.edu/discuss/topic/771639/">Discuss</a>
     </nav>
   <img src="https://www.svgrepo.com/show/521279/error-16.svg" class="headimg" />
     <h1>Oh noes!</h1>
