--- a/public/projects.css
+++ b/public/projects.css
@@ -1,20 +1,24 @@
 .thumbnail {
-  width: 144px;
-  height: 108px;
-  box-shadow: 3px 3px 4px 0px #0000001f;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+    box-shadow: 3px 3px 4px 0px #0000001f;
+    outline: 1px solid #ccc;
+    border-radius: 5px;
+    width: 160px;
+    height: 120px;
 }
 
 .project {
-  width: 144px;
-  height: 190px;
-  display: inline-block;
-  baseline-source: first;
-  transition: 0.2s;
+    display: inline-block;
+    baseline-source: first;
+    transition: 0.2s;
+    width: 160px;
+    text-align: left;
+}
+
+.project a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .project:hover {
-  filter: brightness(0.9);
-  transform: scale(1.05);
+    filter: brightness(0.9);
 }
