more css and stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                   Tags: <%= project.tags[0] %>, <%= project.tags[1] %>
                   <br/>
                   <span style="font-size: 70%">
-                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %></a>
+                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %> <img src="<%= project.pfp %>" /></a>
                   </span>
               </li>
           <% }) %>
@@ -49,7 +49,7 @@
                   Tags: <%= project.tags[0] %>, <%= project.tags[1] %>
                   <br/>
                   <span style="font-size: 70%">
-                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %></a>
+                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %> <img src="<%= project.pfp %>" /></a>
                   </span>
               </li>
           <% }) %>
@@ -70,7 +70,7 @@
                   Tags: <%= project.tags[0] %>, <%= project.tags[1] %>
                   <br/>
                   <span style="font-size: 70%">
-                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %></a>
+                    By: <a href="https://scratch.mit.edu/users/<%= project.author %>/"><%= project.author %> <img src="<%= project.pfp %>" /></a>
                   </span>
               </li>
           <% }) %>
