--- a/public/projects.css
+++ b/public/projects.css
@@ -15,10 +15,19 @@
 }
 
 .project a {
-    color: inherit;
+/*     color: inherit; */
     text-decoration: none;
 }
 
 .project:hover {
     filter: brightness(0.9);
+}
+
+.project span a img {
+  width: 20px;
+  height: 20px;
+  border-radius: 3px;
+  vertical-align: middle;
+  position: absolute;
+  margin-left: 5px;
 }
