--- a/public/projects.css
+++ b/public/projects.css
@@ -7,7 +7,7 @@
 }
 
 .project {
-    display: inline-block;
+    display: table-cell;
     baseline-source: first;
     transition: 0.2s;
     width: 160px;
@@ -17,6 +17,7 @@
 .project a {
 /*     color: inherit; */
     text-decoration: none;
+    position: relative;
 }
 
 .project:hover {
