--- a/public/projects.css
+++ b/public/projects.css
@@ -20,6 +20,11 @@
     position: relative;
 }
 
+.project span:has(a img) {
+    position: absolute;
+    bottom: 10px;
+}
+
 .project:hover {
     filter: brightness(0.9);
 }
@@ -29,6 +34,6 @@
   height: 20px;
   border-radius: 3px;
   vertical-align: middle;
-  position: absolute;
+  position: relative;
   margin-left: 5px;
 }
