--- a/views/403.ejs
+++ b/views/403.ejs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scratch Projects</title>
+    <title>Error 403</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="/all.js"></script>
 </head>
 <body>
     <nav>
