--- a/views/add.ejs
+++ b/views/add.ejs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Scratch Project</title>
+    <title>Add a Project</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="/all.js"></script>
 </head>
 <body>
     <nav>
