--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scratch Projects</title>
+    <title>Home</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/projects.css">
+    <script src="/all.js"></script>
 </head>
 <body>
     <nav>
@@ -13,7 +14,6 @@
         <a href="/add">Add Project</a>
         <a href="https://scratch.mit.edu/discuss/topic/771639/">Discuss</a>
     </nav>
-  
     <div class="section">
       <h1>Recently Added</h1>
       <ul>
